constraints/default/k8sallowedrepos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-allow-only-jenkins
spec:
  enforcementAction: deny
  match:
    scope: "Namespaced"
  kinds:
  - kinds: ["Pod"]
  namespaces: 
    - "default"
  parameters:
    repos: ["jenkins/"]
