constraints/default/k8srequiredlabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: required-labels
spec:
  enforcementAction: deny
  match:
    # excludedNamespaces: ["kube-system","kube-public","kube-node-lease","fleet-system","cattle-system","cattle-gatekeeper-system"]
    kinds:
      - apiGroups: [""]
        kinds:
          - "Pod"
          - "Deployment"
          - "Service"
    namespaces:
      - "default"
  parameters:
    message: "Missing mandatory label [contact]"
    labels:
      - key: contact
